pressing "all" twice will automatically force all records to appear

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ var updates = TAFFY([
         month:9,
         day:22,
         news:"The website now doesn't duplicate any javascript functionality; "+
-            "why even this news snippet is coded in TAFFY and displayed using javascript. "+
+            "why even this news snippet is coded in <a href=\"http://www.taffydb.com\" target=\"taffy\">"+
+            "TAFFY</a> and displayed using javascript. "+
             "this gives nice search features. "+
             "For example, you can search with <a href=\"index.html?t=overhaul\">"+
             "index.html?t=overhaul</a> to find a post "+
