--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@ showfilters( "index.html", [ [ "s", "all" ],
 <script>
 var updates = TAFFY([
     {
+        title:"gifs, jpgs, and javascript oh my!",
+        year:2014,
+        month:10,
+        day:15,
+        news:"Added a very important part of my life to the <a href=\"about.html#life\">About</a> page, " +
+            "updated my <a href=\"about.html#hello\">mugshot</a> (for the sake of the recently added "+
+            " important part of my life), too.  Also look for a javascript easter egg there.",
+        tags:"website"
+    },
+    {
         title:"Website internals overhaul",
         year:2014,
         month:9,
