more fancy pictures

--- a/about.html
+++ b/about.html
@@ -156,13 +156,24 @@ the quantum many-body problem, specifically in the realm of electronic structure
 insightful approaches, and test approximations by writing code.
 </p>
 
+<table class=nostyle>
+<tr>
+<td>
+<a href="http://onlinelibrary.wiley.com/doi/10.1002/qua.v113.2/issuetoc" target="IJQC-dft-in-a-nutshell">
+<img src="i/IJQC-psi.jpg" width="100%" alt="No wavefunctions allowed" style="display:block;margin:10 -5 10px 0;border-style:solid;border-color:#201515;border-width:0 2 2 0;">
+</a>
+</td>
+<td>&nbsp;&nbsp;</td>
+<td>
 <p>
-In addition to original research papers, I write articles to 
+In addition to original research papers, I have written articles to 
 explain the theories and approximations in use.  See my <a href="pub.html">publications</a>,
-specifically <a href="pub.html?t=nutshell">DFT in a nutshell</a>.
-<!--I may also <a href="http://uncalc.blogspot.com/" target="lowblog">blog</a> about
-some interesting theories from time to time.-->
+specifically <a href="pub.html?t=nutshell">DFT in a nutshell</a>, which made the cover art!
 </p>
+</td>
+</tr>
+</table>
+
 
 </li>
 
@@ -219,7 +230,7 @@ the once and future king, Jesus.
 I also found the greatest woman out there to be my wife.
 She even understands my humor sometimes.
 <center>
-<img src="i/Amber-Lucas-Boat-2013.gif" alt="on a boat" style="display:block;margin:10 -5 10px 0;border-style:solid;border-color:#201515;border-width:0 2 2 0;" height="150">
+<img src="i/al-2013.gif" alt="on a boat" style="display:block;margin:10 -5 10px 0;border-style:solid;border-color:#201515;border-width:0 2 2 0;" height="150">
 </center>
 I ask her all my engineering questions!
 </p>
