--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@ var updates = TAFFY([
         year:2014,
         month:10,
         day:15,
-        news:"Added a very important part of my life to the <a href=\"about.html#life\">About</a> page, " +
+        news:"Added a very important part of my life to the <a href=\"about.html#life\">about</a> page, " +
             "updated my <a href=\"about.html#hello\">mugshot</a> (for the sake of the recently added "+
-            " important part of my life), too.  Also look for a javascript easter egg there.",
+            "important part of my life), too.  Also look for a javascript easter egg there. "+
+            "And that's not all, <a href=\"code.html\">code</a> and <a href=\"teach.html\">teaching</a> pages got "+
+            "fancy pictures.",
         tags:"website"
     },
     {
@@ -69,7 +71,7 @@ var updates = TAFFY([
             "index.html?c=face</a> to find "+
             "a post with <i>face</i> in its content.</p><p>You can also do that on the "+
             "coding and publications pages, although that was already a hidden feature.</p>"+
-            "<p>Also moved my face to the <a href=\"about.html\">About</a> page, and " +
+            "<p>Also moved my face to the <a href=\"about.html\">about</a> page, and " +
             "updated my <a href=\"LucasWagner-CV.pdf\" target=\"CV\">CV</a>.",
         tags:"website"
     },
