--- a/code.html
+++ b/code.html
@@ -41,11 +41,11 @@ var projects = TAFFY([
     {
         title:"Sparrow-bullets",
         url:"https://github.com/lowagner/sparrow-bullets",
+        img:"i/sparrow-bullets.png",
         yearstart:2014,
         yearend:2014,
         content:"Combining Sparrow3D (render/game engine) with Bullet physics (physics engine). "+
-            "Currently this \"game\" has you pushing blocks off the platform.  Eventually I hope to "+
-            "get it running on various open-source handhelds, like the OpenPandora or the GCW-Zero. "+
+            "Currently this game has you pushing blocks off the platform using physics!  "+
             "Check it out on <a href='https://github.com/lowagner/sparrow-bullets' target='Sparrow-bullets'>Github</a>, "+
             "or take a look at a <a href='https://www.youtube.com/watch?v=K-ouuWwczM4' target='sparrow-youtube'>video</a> on it.",
         tags:"game, physics, c++"
@@ -64,6 +64,7 @@ var projects = TAFFY([
         title:"PyanoH3ro",
         yearstart:2013,
         yearend:2014,
+        img:"i/pyanoh3ro.png",
         content:"PyanoH3ro will be a ripoff of some very similar sounding rhythm and band games. "+
             "Heavily inspired by DDR, which is good for exercise, and a desire to make "+
             "these sorts of games helpful for actually learning music.</p><p>"+
@@ -89,6 +90,7 @@ var projects = TAFFY([
         url:"https://github.com/lowagner/walker",
         yearstart:2009,
         yearstart:2009,
+        img:"i/walker.png",
         content:"Walker is a game where you must find safe passageway through a dungeon. "+
             "Mostly coded around Christmas 2009. "+
             "It has spectacular graphics for the terminal. Download from the "+
@@ -121,6 +123,18 @@ function writerecord( record, recordnumber ) {
     document.write('<td class=mainentrydate>'+nutxt+'</td></tr></table>');
     
     document.write("<p>"+record["content"]+"</p>");
+
+    if ( record["img"] !== undefined )
+    {
+        nutxt = "<img src=\""+record["img"]+"\" width=\"100%\" style=\"display:block;margin:-5px 5px 18px 0px;border-style:solid;border-color:#201515;border-width:0 2 2 0;\">";
+        if ( record["url"] !== undefined )
+        {
+            nutxt = "<a href='" + record["url"] + "' target='"+record["title"]+"'>" + nutxt+"</a>";
+        }
+        document.write(nutxt);
+    }
+
+
     if ( record["tags"] !== undefined )
     {
         document.write("<p class=tags>tags: "+record["tags"]+"</p>");
