Pictures for pynances and NLRatoms

--- a/code.html
+++ b/code.html
@@ -55,6 +55,7 @@ var projects = TAFFY([
         url:"https://github.com/lowagner/NLRatoms",
         yearstart:2014,
         yearend:2014,
+        img:"i/NLRatoms.png",
         content:"Mathematica code to do atomic calculations with the nonlocal Wigner-Seitz radius, "+
             "not optimized but hopefully readable. "+
             "It's on <a href='https://github.com/lowagner/NLRatoms' target='NLRatoms'>Github</a>.",
@@ -79,6 +80,7 @@ var projects = TAFFY([
         url:"https://github.com/lowagner/pynances",
         yearstart:2013,
         yearend:2014,
+        img:"i/pynances.png",
         content:"Pynances is a python-based utility for keeping track of your finances. "+
             "Originally designed to work with multiple currencies, " +
             "since my family is being paid in two!  Download (or check out) from the "+
