fixed minor comment error

--- a/code.html
+++ b/code.html
@@ -102,8 +102,8 @@ var projects = TAFFY([
     ]);
 
 // GLOBAL parameters YOU CAN SET
-recordsMAXpp = 4; // max number of codes to display per page
-recordsSHOWbackTOtopAFTER = 3;  // after X codes, show the back to top link.  this should NOT be greater than or equal to recordsMAXpp.
+recordsMAXpp = 3; // max number of codes to display per page
+recordsSHOWbackTOtopAFTER = 3;  // after X codes, show the back to top link.  this should NOT be greater than recordsMAXpp.
 
 function writerecord( record, recordnumber ) {
     var nutxt = record["title"];
