--- a/pub.html
+++ b/pub.html
@@ -201,7 +201,7 @@ var publications = TAFFY([
     ]);
 
 recordsMAXpp = 4; // max number of codes to display per page
-recordsSHOWbackTOtopAFTER = 3;  // after X codes, show the back to top link.  this should NOT be greater than or equal to recordsMAXpp.
+recordsSHOWbackTOtopAFTER = 3;  // after X codes, show the back to top link.  this should NOT be greater than recordsMAXpp.
 
 function getpeople( authors ) {
     // grab all but last "and" in the author list.
