--- a/teach.html
+++ b/teach.html
@@ -25,7 +25,7 @@
 <script>
 // GLOBAL parameters YOU CAN SET
 recordsMAXpp = 5; // max number of codes to display per page
-recordsSHOWbackTOtopAFTER = 4;  // after X codes, show the back to top link.  this should NOT be greater than or equal to recordsMAXpp.
+recordsSHOWbackTOtopAFTER = 4;  // after X codes, show the back to top link.  this should NOT be greater than recordsMAXpp.
 
 showfilters( "teach.html", [ [ "s", "all" ] ] ); //[ "date", "2007" ] ] );
 </script>
