can search by id for pubs.  also acceptance of nonlocal paper!

--- a/index.html
+++ b/index.html
@@ -37,13 +37,22 @@ showfilters( "index.html", [ [ "s", "all" ],
 
     <div id=taglinks>
     <script>
-    showtags( "index.html", ["website", "coding"] );
+    showtags( "index.html", [ "research", "coding", "website" ] );
     </script>
     </div>
 
 
 <script>
 var updates = TAFFY([
+    {
+        title:"Nonlocal acceptance!",
+        year:2014,
+        month:10,
+        day:15,
+        news:"Breaking news.  The <a href=\"pub.html?id=9\">nonlocal radius paper</a> "+
+             "is accepted by Physical Review A!",
+        tags:"research"
+    },
     {
         title:"gifs, jpgs, and javascript oh my!",
         year:2014,
