pictures to publications

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@ showfilters( "index.html", [ [ "s", "all" ],
 <script>
 var updates = TAFFY([
     {
+        title:"Now with pictures.",
+        year:2014,
+        month:12,
+        day:16,
+        news:"Added pictures to the <a href=\"pub.html\">publications</a>, because we live in a visual age. "+
+        "Also, we are now officially published, so check out the bibliographic information for the <a href=\"pub.html?id=9\">nonlocal paper</a>!",
+        tags:"research"
+    },
+    {
         title:"Nonlocal acceptance!",
         year:2014,
         month:10,
