Added news of pyanoh3ro release

--- a/code.html
+++ b/code.html
@@ -39,6 +39,19 @@ showfilters( "code.html", [ [ "s", "all" ],
 <script>
 var projects = TAFFY([
     {
+        title:"PyanoH3ro",
+        url:"https://github.com/lowagner/pyanoh3ro",
+        yearstart:2013,
+        yearend:2015,
+        img:"i/pyanoh3ro.png",
+        content:"PyanoH3ro is a tool for learning and composing MIDI music. "+
+            "Heavily inspired by DDR, which is good for exercise, and a desire to make "+
+            "these sorts of games helpful for actually learning music.</p><p>"+
+            "Check it out on <a href=\"https://github.com/lowagner/pyanoh3ro\" target='gitpyano'>Github</a>, or learn how it works a bit from my "+
+            "<a href='https://www.youtube.com/user/ilictis' target='youtubepyano'>Youtube videos</a> on it. ",
+        tags:"game, music, python"
+    },
+    {
         title:"Sparrow-bullets",
         url:"https://github.com/lowagner/sparrow-bullets",
         img:"i/sparrow-bullets.png",
@@ -47,7 +60,7 @@ var projects = TAFFY([
         content:"Combining Sparrow3D (render/game engine) with Bullet physics (physics engine). "+
             "Currently this game has you pushing blocks off the platform using physics!  "+
             "Check it out on <a href='https://github.com/lowagner/sparrow-bullets' target='Sparrow-bullets'>Github</a>, "+
-            "or take a look at a <a href='https://www.youtube.com/watch?v=K-ouuWwczM4' target='sparrow-youtube'>video</a> on it.",
+            "or take a look at a <a href='https://www.youtube.com/watch?v=UD6rm4y-BtE' target='sparrow-youtube'>video</a> on it.",
         tags:"game, physics, c++"
     },
     {
@@ -60,20 +73,6 @@ var projects = TAFFY([
             "not optimized but hopefully readable. "+
             "It's on <a href='https://github.com/lowagner/NLRatoms' target='NLRatoms'>Github</a>.",
         tags:"physics, research, chemistry, mathematica"
-    },
-    {
-        title:"PyanoH3ro",
-        yearstart:2013,
-        yearend:2014,
-        img:"i/pyanoh3ro.png",
-        content:"PyanoH3ro will be a ripoff of some very similar sounding rhythm and band games. "+
-            "Heavily inspired by DDR, which is good for exercise, and a desire to make "+
-            "these sorts of games helpful for actually learning music.</p><p>"+
-            "I have high hopes that this will also be a very fun music composition tool. "+
-            "It is nearly complete (??), but until release check out my "+
-            "<a href='https://www.youtube.com/user/ilictis' target='youtubes'>Youtube videos</a> on it. "+
-            "(<a href='https://www.youtube.com/watch?v=1l3dUywve7Q' target='pyano-youtube'>Here</a> is latest video.)",
-        tags:"game, music, python"
     },
     {
         title:"Pynances",
