--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@ showfilters( "index.html", [ [ "s", "all" ],
 <script>
 var updates = TAFFY([
     {
+        title:"Some updates.",
+        year:2015,
+        month:1,
+        day:31,
+        news:"The holiday season of 2014 was for working on <a href=\"code.html?t=PyanoH3ro\">PyanoH3ro</a>. "+
+        "Now released on Github, so check it out!",
+        tags:"coding"
+    },
+    {
         title:"Now with pictures.",
         year:2014,
         month:12,
