--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-<body>
+<body> <!-- style="background-image:url(css/bg.png)">-->
 <div id=container>
 
 <a id="top"> </a>
@@ -44,6 +44,15 @@ showfilters( "index.html", [ [ "s", "all" ],
 
 <script>
 var updates = TAFFY([
+    {
+        title:"Summer fun with memorizing matrices",
+        year:2015,
+        month:6,
+        day:4,
+        news:"Make sure to <a href=\"code.html?t=Memory\">memorize</a> your matrices right. "+
+        "Now released on Github, so check it out!",
+        tags:"coding"
+    },
     {
         title:"Some updates.",
         year:2015,
