--- a/about.html
+++ b/about.html
@@ -232,7 +232,7 @@ She even understands my humor sometimes.
 <center>
 <img src="i/al-2013.gif" alt="on a boat" style="display:block;margin:10 -5 10px 0;border-style:solid;border-color:#201515;border-width:0 2 2 0;" height="150">
 </center>
-I ask her all my engineering questions!
+I am also a proud father.
 </p>
 </li>
 
