added comment for pub 10

--- a/pub.html
+++ b/pub.html
@@ -69,7 +69,8 @@ var publications = TAFFY([
         //url:"http://link.aps.org/doi/10.1103/PhysRevA.90.052512",
         eprint:"p/BSWB15.pdf",
         lowid:10,
-        content:"",
+        content:"Examining the use of exponential interactions, which speed up DMRG calculations, " +
+            "and developing the LDA for expellium.", 
         tags:"1d, DFT"
     },
     {
